# Lumina

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx
app/report/[id]/: page.tsx
app/reports/: page.tsx
app/scan/[id]/: page.tsx
app/scans/: page.tsx
backend/: __init__.py  main.py
backend/core/: constants.py  data_models.py  prompts.py
backend/db/: scans.py
backend/routers/: scan_router.py
backend/services/: callbacks.py  graph_service.py  llm_service.py  planner_service.py  repo_ingest_service.py  scan_service.py
backend/tools/: dependencies.py  injection.py  recon.py  secrets.py  static_analysis.py  static_c.py
components/: app-sidebar.tsx  attack-chain-graph.tsx  evidence-drawer.tsx  finding-card.tsx  findings-chart.tsx  hero.tsx  mermaid-diagram.tsx  nmap-port-map.tsx  report-modal.tsx  scan-form.tsx  scan-progress.tsx  site-header.tsx
components/gl/: index.tsx  particles.tsx
components/gl/shaders/: pointMaterial.ts  simulationMaterial.ts
docker/: Dockerfile.backend  Dockerfile.frontend
types/: scan.ts
