[project]
name = "backend"
version = "0.1.0"
description = "Backend for the Modern Next.js + FastAPI template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sse-starlette>=2.1.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
